# floorplan

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json
.github/workflows/: ci.yml  deploy.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/app/: approval.py  critic.py  db.py  deps.py  domain_validation.py  errors.py  jobs.py  main.py  middleware.py  models.py  progress.py  schemas_api.py  security.py  seed.py  service_clients.py  settings.py  versioning.py  worker.py
apps/api/app/routers/: auth.py  boundary.py  codes.py  collab.py  exports.py  jobs.py  plans.py  program.py  projects.py
apps/api/scripts/: export_openapi.py
apps/api/tests/: test_approval.py  test_critic.py  test_domain_validation.py  test_errors.py  test_health.py  test_integration_flow.py  test_openapi.py  test_plans_critic.py  test_security.py  test_versioning.py
apps/web/: Dockerfile  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx  shortcuts.ts
apps/web/src/api/: client.ts  types.ts
apps/web/src/boundary/: BoundaryCanvas.tsx  BoundaryEditor.tsx  Massing3D.tsx  boundary-model.ts  dxf-import.ts  store.ts
apps/web/src/codes/: CodesPage.tsx  CompliancePanel.tsx
apps/web/src/components/: ErrorBoundary.tsx
apps/web/src/demo/: plan.ts
apps/web/src/hooks/: queries.ts  useJob.ts
apps/web/src/program/: ProgramEditor.tsx  ProgramGraphView.tsx  ProgramImportDialog.tsx  excel-export.ts  excel-import.ts  program-model.ts  program.test.ts  room-type-infer.ts  store.ts
apps/web/src/routes/: Auth.tsx  Dashboard.tsx  ProjectPages.tsx  ProtectedRoute.tsx  Workspaces.tsx
apps/web/src/store/: auth.ts  editor.ts
apps/web/src/viewport/: PlanCanvas2D.tsx  PlanScene3D.tsx  circulation.ts  plan-3d.test.ts  plan-3d.ts  plan-render.test.ts  plan-render.ts  sunlight.ts
apps/web/src/workspace/: Workspace.tsx  plan-summary.ts  planStore.ts
datasets/: README.md
infra/: docker-compose.yml
infra/k8s/: README.md  keda-scaledobject.yaml  manifests.yaml
infra/migrations/: .gitkeep  env.py
infra/observability/: prometheus.yml
inputs/: README.md  adjacency-matrix.csv  adjacency-matrix.xlsx  area-program.xlsx  boundary.json  example.md  program-graph.json
models/: README.md
plan/: 00-architecture-and-stack.md  PROGRESS.md  README.md  RUN-LOCAL.md  phase-01-foundations.md  phase-02-domain-model.md  phase-03-backend-core.md  phase-04-frontend-shell.md  phase-05-boundary-input.md  phase-06-room-graph-input.md  phase-07-buildingcode-rag.md  phase-08-generative-engine.md  phase-09-code-constraints.md  phase-10-2d-plan-editor.md  phase-11-3d-model.md  phase-12-component-library.md  phase-13-interactive-editing.md  phase-14-variants-workflow.md  phase-15-export-dwg-ifc.md  phase-16-revit-integration.md  phase-17-approval-collab.md  phase-18-deploy-scale.md  phase-19-testing-qa.md  phase-20-hardening-polish.md
services/codes/: Dockerfile  pyproject.toml
services/codes/app/: dsl.py  embeddings.py  extract.py  ingest.py  main.py  registry.py  rulesets.py  service.py  settings.py  store.py
services/codes/app/seed_data/: generic-ibc.code.md
services/codes/tests/: test_codes.py
services/export/: Dockerfile  pyproject.toml
services/export/app/: dxf_export.py  ifc_export.py  main.py
services/export/tests/: test_export.py
services/generator/: Dockerfile  pyproject.toml
services/generator/app/: geometry.py  layout.py  main.py  partition.py  scoring.py  solver.py
services/generator/tests/: test_solver.py
services/geometry/: Dockerfile  pyproject.toml
services/geometry/app/: main.py  solidify.py
services/geometry/tests/: test_solidify.py
services/revit-addin/: FpgStudio.RevitAddin.csproj  FpgStudio.addin  ImportPlanCommand.cs  README.md
services/validator/: Dockerfile  pyproject.toml
services/validator/app/: main.py  metrics.py  validator.py
services/validator/tests/: test_validator.py
tests/: .gitkeep  e2e_phase07.py
