[project]
name = "fpg-api"
version = "0.0.1"
description = "API gateway for the Generative 3D Floor Plan Studio"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic[email]>=2.9",
  "pydantic-settings>=2.6",
  "motor>=3.6",
  "pyjwt>=2.10",
  "bcrypt>=4.2",
  "arq>=0.26",
  "redis>=5.2",
  "httpx>=0.27",
  "jsonschema>=4.23",
  "python-multipart>=0.0.12",
  "prometheus-client>=0.21",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
  "mypy>=1.13",
]
critic = [
  "openai>=1.50",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["motor.*", "arq.*", "prometheus_client.*", "jsonschema.*", "referencing.*"]
ignore_missing_imports = true
