[project]
name = "fpg-codes"
version = "0.1.0"
description = "Building-code ingestion + RAG + rule extraction. Phase 07."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
]

[project.optional-dependencies]
# Heavy/optional paths, off by default so the dev stack stays lean and offline:
#   ingest  -> PDF parsing (PyMuPDF)         extract -> LLM rule extraction (OpenAI SDK)
ingest = ["pymupdf>=1.24"]
extract = ["openai>=1.40"]
dev = ["pytest>=8.3", "httpx>=0.27", "ruff>=0.8", "mypy>=1.13", "jsonschema>=4.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["fitz.*", "openai.*", "jsonschema.*", "referencing.*"]
ignore_missing_imports = true
