[project]
name = "fpg-export"
version = "0.0.1"
description = "Plan/3D -> DXF/DWG (ODA) and IFC4 export. Phase 15."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "ezdxf>=1.3",
  "ifcopenshell>=0.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "httpx>=0.27", "ruff>=0.8", "mypy>=1.13"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["ezdxf.*", "ifcopenshell.*"]
ignore_missing_imports = true
