[project]
name = "fpg-geometry"
version = "0.0.1"
description = "Solidify plan -> 3D (walls/floors/openings) + tessellate to glTF/GLB. Phase 11."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "trimesh>=4.5",
  "numpy>=2.1",
  "shapely>=2.0",
  "mapbox-earcut>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "httpx>=0.27", "ruff>=0.8", "mypy>=1.13"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["trimesh.*", "shapely.*"]
ignore_missing_imports = true
