[project]
name = "fpg-validator"
version = "0.0.1"
description = "Pure, deterministic code-compliance validator + scoring. Phase 09."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "httpx>=0.27", "ruff>=0.8", "mypy>=1.13", "jsonschema>=4.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["jsonschema.*", "referencing.*"]
ignore_missing_imports = true
